--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
             <!-- Navigation -->
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">Startmin</a>
+                  <a class="navbar-brand" href="/">{% block title %}Prueba Nivea{% endblock %}</a>
                 </div>
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -46,16 +46,14 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <ul class="nav navbar-nav navbar-left navbar-top-links">
-                    <li><a href="#"><i class="fa fa-home fa-fw"></i> Website</a></li>
-                </ul>
-
                 <ul class="nav navbar-right navbar-top-links">
+                    {% block panel_notif %}
                     <li class="dropdown navbar-inverse">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                             <i class="fa fa-bell fa-fw"></i> <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu dropdown-alerts">
+                            {% block notifications %}
                             <li>
                                 <a href="#">
                                     <div>
@@ -103,20 +101,19 @@
                                     <i class="fa fa-angle-right"></i>
                                 </a>
                             </li>
+                            {% endblock %}
                         </ul>
                     </li>
+                    {% endblock %}
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="fa fa-user fa-fw"></i> secondtruth <b class="caret"></b>
+                          <i class="fa fa-user fa-fw"></i> {{ user.username }} <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                            </li>
+                            <li><a href="#"><i class="fa fa-user fa-fw"></i>Perfil</a></li>
+                            <!--li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a></li-->
                             <li class="divider"></li>
-                            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                            </li>
+                            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i>Logout</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -125,6 +122,7 @@
                 <div class="navbar-default sidebar" role="navigation">
                     <div class="sidebar-nav navbar-collapse">
                         <ul class="nav" id="side-menu">
+                            {% block search %}
                             <li class="sidebar-search">
                                 <div class="input-group custom-search-form">
                                     <input type="text" class="form-control" placeholder="Search...">
@@ -136,6 +134,8 @@
                                 </div>
                                 <!-- /input-group -->
                             </li>
+                            {% endblock %}
+                            {% block menu %}
                             <li>
                                 <a href="index.html" class="active"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                             </li>
@@ -223,6 +223,7 @@
                                 </ul>
                                 <!-- /.nav-second-level -->
                             </li>
+                            {% endblock %}
                         </ul>
                     </div>
                 </div>
@@ -232,11 +233,12 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1 class="page-header">Dashboard</h1>
+                          <h1 class="page-header">{% block title_page %}Dashboard{% endblock %}</h1>
                         </div>
                         <!-- /.col-lg-12 -->
                     </div>
                     <!-- /.row -->
+                    {% block content_head %}
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
                             <div class="panel panel-primary">
@@ -332,6 +334,8 @@
                         </div>
                     </div>
                     <!-- /.row -->
+                    {% endblock %}
+                    {% block content %}
                     <div class="row">
                         <div class="col-lg-8">
                             <div class="panel panel-default">
@@ -830,6 +834,7 @@
                         </div>
                         <!-- /.col-lg-4 -->
                     </div>
+                    {% endblock %}
                     <!-- /.row -->
                 </div>
                 <!-- /.container-fluid -->
@@ -841,20 +846,49 @@
 
         <!-- jQuery -->
         <script src="{% static "js/jquery.min.js" %}"></script>
-
         <!-- Bootstrap Core JavaScript -->
         <script src="{% static "js/bootstrap.min.js" %}"></script>
-
         <!-- Metis Menu Plugin JavaScript -->
         <script src="{% static "js/metisMenu.min.js" %}"></script>
-
+        {% block javascript %}
         <!-- Morris Charts JavaScript -->
         <script src="{% static "js/raphael.min.js" %}"></script>
         <script src="{% static "js/morris.min.js" %}"></script>
         <script src="{% static "js/morris-data.js" %}"></script>
-
+        {% endblock %}
         <!-- Custom Theme JavaScript -->
-        <script src="{% static "js/startmin.js" %}"></script>
+        <script>
+          $(function() {
+            $('#side-menu').metisMenu();
+          });
+          $(function() {
+              $(window).bind("load resize", function() {
+                  topOffset = 50;
+                  width = (this.window.innerWidth > 0) ? this.window.innerWidth : this.screen.width;
+                  if (width < 768) {
+                      $('div.navbar-collapse').addClass('collapse');
+                      topOffset = 100; // 2-row-menu
+                  } else {
+                      $('div.navbar-collapse').removeClass('collapse');
+                  }
+
+                  height = ((this.window.innerHeight > 0) ? this.window.innerHeight : this.screen.height) - 1;
+                  height = height - topOffset;
+                  if (height < 1) height = 1;
+                  if (height > topOffset) {
+                      $("#page-wrapper").css("min-height", (height) + "px");
+                  }
+              });
+
+              var url = window.location;
+              var element = $('ul.nav a').filter(function() {
+                  return this.href == url || url.href.indexOf(this.href) == 0;
+              }).addClass('active').parent().parent().addClass('in').parent();
+              if (element.is('li')) {
+                  element.addClass('active');
+              }
+          });
+        </script>
 
     </body>
 </html>
