--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
             <!-- Navigation -->
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="/">{% block title %}Prueba Nivea{% endblock %}</a>
+                  <a class="navbar-brand" href="/">Prueba Nivea | {% block title %}Principal{% endblock %}</a>
                 </div>
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
