--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -8,7 +8,7 @@
   <li>
       <a href="/" class="active"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
   </li>
-  <li>
+  <!--li>
       <a href="#"><i class="fa fa-th-large fa-fw"></i> Escalas<span class="fa arrow"></span></a>
       <ul class="nav nav-second-level">
           <li>
@@ -40,15 +40,15 @@
               <a href="#"><i class="fa fa-plus fa-fw"></i> Nueva</a>
           </li>
       </ul>
-  </li>
+  </li-->
   <li>
-      <a href="#"><i class="fa fa-check-square fa-fw"></i> Evaluaciones<span class="fa arrow"></span></a>
+      <a href="#"><i class="fa fa-laptop fa-fw"></i> Evaluaciones<span class="fa arrow"></span></a>
       <ul class="nav nav-second-level">
           <li>
-              <a href="#"><i class="fa fa-list fa-fw"></i> Lista</a>
+              <a href="/evaluaciones"><i class="fa fa-list fa-fw"></i> Lista</a>
           </li>
           <li>
-              <a href="#"><i class="fa fa-plus fa-fw"></i> Nueva</a>
+              <a href="/evaluaciones/n/"><i class="fa fa-plus fa-fw"></i> Nueva</a>
           </li>
       </ul>
   </li>
