--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="Jorge Hernández">
 
-        <title>Prueba Nivea</title>
+        <title>Nivea :: Beta</title>
         {% load static %}
         <!-- Bootstrap Core CSS -->
         <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
@@ -23,7 +23,16 @@
         <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
         <!-- jQuery -->
         <script src="{% static "js/jquery.min.js" %}"></script>
-
+        <!-- ChartJS -->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+        
+        <style>
+          @media print {
+            .noprint{
+              display: none;
+            }
+          }
+        </style>
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -38,7 +47,7 @@
             <!-- Navigation -->
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="navbar-header">
-                  <a class="navbar-brand" href="/">Prueba Nivea | {% block title %}Principal{% endblock %}</a>
+                  <a class="navbar-brand" href="/">| {% block title %}Principal{% endblock %}</a>
                 </div>
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -115,7 +124,7 @@
                             <li><a href="#"><i class="fa fa-user fa-fw"></i>Perfil</a></li>
                             <!--li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a></li-->
                             <li class="divider"></li>
-                            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i>Logout</a></li>
+                            <li><a href="/logout/"><i class="fa fa-sign-out fa-fw"></i>Logout</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -850,11 +859,8 @@
         <script src="{% static "js/bootstrap.min.js" %}"></script>
         <!-- Metis Menu Plugin JavaScript -->
         <script src="{% static "js/metisMenu.min.js" %}"></script>
-        <!-- Google Charts -->
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         {% block javascript %}
         {% endblock %}
-        <!-- Custom Theme JavaScript -->
         <script>
           $(function() {
             $('#side-menu').metisMenu();
