--- a/web/static/css/startmin.css
+++ b/web/static/css/startmin.css
@@ -2,10 +2,66 @@
  * Start Bootstrap - SB Admin 2 Bootstrap Admin Theme (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
+ */..}
+@font-face{
+    font-family:'NiveaLight';
+    src:url('..../fonts/nivea_light-webfont.woff') format('woff'),url(..,/fonts/nivea_light-webfont.svg#webfont') format('svg');
+    font-weight:normal;
+    font-style:normal;
+    font-display:fallback
+}
+@font-face{
+    font-family:'NiveaMedium';
+    src:url('../fonts/nivea_medium-webfont.woff') format('woff'),url('../fonts/nivea_medium-webfont.svg#webfont') format('svg');
+    font-weight:normal;
+    font-style:normal;
+    font-display:fallback
+}
+@font-face{
+    font-family:'NiveaBook';
+    src:url('../fonts/nivea_book-webfont.woff') format('woff'),url('../fonts/nivea_book-webfont.svg#webfont') format('svg');
+    font-weight:normal;
+    font-style:normal;
+    font-display:fallback
+}
+@font-face{
+    font-family:'NiveaBookItalic';
+    src:url('../fonts/niveabookitalic-webfont.woff') format('woff'),url('../fonts/niveabookitalic-webfont.svg#webfont') format('svg');
+    font-weight:normal;
+    font-style:normal;
+    font-display:fallback
+}
+@font-face{
+    font-family:'NiveaCremeRegular';
+    src:url('../fonts/niveacremeregular-webfont.woff') format('woff'),url('../fonts/niveacremeregular-webfont.svg#webfont') format('svg');
+    font-weight:normal;
+    font-style:normal;
+    font-display:fallback
+}
+@font-face{
+    font-family:'NiveaBoldTextScreen';
+    src:url('../fonts/niveaboldtextscreen-webfont.woff') format('woff'),url('../fonts/niveaboldtextscreen-webfont.svg#webfont') format('svg');
+    font-weight:normal;
+    font-style:normal;
+    font-display:fallback
+}
+@font-face{
+    font-family:'NiveaIcons';
+    src:url('../fonts/NiveaIcons.woff') format('woff'),url('../fonts/NiveaIcons.svg#NiveaIcons') format('svg');
+    font-weight:normal;
+    font-style:normal;
+    font-display:block
+}
+@font-face{
+    font-family:'WeatherIcons';
+    src:url('../fonts/WeatherIcons.woff') format('woff'),url('../fonts/WeatherIcons.svg#WeatherIcons') format('svg');
+    font-weight:normal;
+    font-style:normal;
+    font-display:block
+}
 body {
     background-color: #f8f8f8;
+    font-family: "NiveaBook", Arial, sans-serif;
 }
 
 #wrapper {
@@ -26,7 +82,9 @@ body {
         border-left: 1px solid #e7e7e7;
     }
 }
-
+.navbar-inverse{
+    background-color: #00136f;
+}
 .navbar-header {
     float: left;
 }
@@ -250,6 +308,9 @@ body {
     clear: both;
 }
 
+table{
+  font-family: "NiveaBook";
+}
 table.dataTable thead .sorting,
 table.dataTable thead .sorting_asc,
 table.dataTable thead .sorting_desc,
