--- a/web/templates/evaluacion_form.html
+++ b/web/templates/evaluacion_form.html
@@ -1,10 +1,12 @@
 {% extends "base_site.html" %}
+
+{% block title %}Evaluaciones{% endblock %}
 {% block title_page %}
-{% if form.instance.pk %}
-  Editando Evaluación {{ form.instance.id }}
-{% else %}
-  Nueva Evaluación
-{% endif %}
+  {% if form.instance.pk %}
+    Editando Evaluación {{ form.instance.id }}
+  {% else %}
+    Nueva Evaluación
+  {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -70,7 +72,8 @@
       </div>
       {% csrf_token %}
       {% if form.instance.pk %}
-        <button type="submit" class="btn btn-primary">Guardar y Siguiente</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a href="/evaluaciones/e/{{ form.instance.id }}/q/" class="btn btn-secondary">Ir a Cuestionario</a>
       {% else %}
         <button type="submit" class="btn btn-primary">Siguiente</button>
       {% endif %}
