Mejorando valores en evaluacion

--- a/web/templates/evaluacion.html
+++ b/web/templates/evaluacion.html
@@ -12,35 +12,35 @@
         <tbody>
           <tr>
             <td width="150px"><b>ID</b></td>
-            <td>{{ evaluacion.id }}</td>
+            <td><b>{{ evaluacion.id }}</b></td>
           </tr>
           <tr>
             <td>Fecha</td>
-            <td>{{ evaluacion.fecha }}</td>
+            <td><b>{{ evaluacion.fecha }}</b></td>
           </tr>
           <tr>
             <td>Sexo</td>
-            <td>{{ evaluacion.get_sexo }}</td>
+            <td><b>{{ evaluacion.get_sexo }}</b></td>
           </tr>
           <tr>
             <td>Edad</td>
-            <td>{{ evaluacion.edad }} años</td>
+            <td><b>{{ evaluacion.edad }} años</b></td>
           </tr>
           <tr>
             <td>Estado Civíl</td>
-            <td>{{ evaluacion.get_estado_civil }}</td>
+            <td><b>{{ evaluacion.get_estado_civil }}</b></td>
           </tr>
           <tr>
             <td>Escolaridad</td>
-            <td>{{ evaluacion.get_escolaridad }}</td>
+            <td><b>{{ evaluacion.get_escolaridad }}</b></td>
           </tr>
           <tr>
             <td>Localidad</td>
-            <td>{{ evaluacion.localidad }}</td>
+            <td><b>{{ evaluacion.localidad }}</b></td>
           </tr>
           <tr>
             <td>Número de Hijos</td>
-            <td>{{ evaluacion.get_numero_hijos }}</td>
+            <td><b>{{ evaluacion.get_numero_hijos }}</b></td>
           </tr>
         </tbody>
       </table>
