--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="Jorge Hernández">
 
-        <title>Nivea :: Beta</title>
+        <title>Nivea :: {% block page_title %}Beta{% endblock%}</title>
         {% load static %}
         <!-- Bootstrap Core CSS -->
         <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
@@ -26,13 +26,6 @@
         <!-- ChartJS -->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
         
-        <style>
-          @media print {
-            .noprint{
-              display: none;
-            }
-          }
-        </style>
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
