--- a/web/static/css/startmin.css
+++ b/web/static/css/startmin.css
@@ -718,3 +718,23 @@ table.dataTable thead .sorting:after {
     color: #fff; /* active text color */
     background-color: #a94442; /* active bg color */
 }
+
+/* Custom */
+.competencia_title{
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.competencia_description{
+}
+.competencia_text{
+  font-family: "Arial";
+  text-align: justify;
+}
+@media print{
+  .noprint{
+    display: none;
+  }
+  .new_page{
+    page-break-before: always;
+  }
+}
